--- a/finalprojectreact/src/App.css
+++ b/finalprojectreact/src/App.css
@@ -16,6 +16,7 @@
 
 .App-header {
   background-color: #282c34;
+  font-color: green;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
